--- a/views/home.html
+++ b/views/home.html
@@ -1,18 +1,153 @@
+<script>
+    //this function can remove a array element.
+    Array.remove = function(array, from, to) {
+        var rest = array.slice((to || from) + 1 || array.length);
+        array.length = from < 0 ? array.length + from : from;
+        return array.push.apply(array, rest);
+    };
 
-<div class="row">
+    //this variable represents the total number of popups can be displayed according to the viewport width
+    var total_popups = 0;
+
+    //arrays of popups ids
+    var popups = [];
+
+    //this is used to close a popup
+    function close_popup(id)
+    {
+        for(var iii = 0; iii < popups.length; iii++)
+        {
+            if(id == popups[iii])
+            {
+                Array.remove(popups, iii);
+
+                document.getElementById(id).style.display = "none";
+
+                calculate_popups();
+
+                return;
+            }
+        }
+    }
+
+    //displays the popups. Displays based on the maximum number of popups that can be displayed on the current viewport width
+    function display_popups()
+    {
+        var right = 220;
+
+        var iii = 0;
+        for(iii; iii < total_popups; iii++)
+        {
+            if(popups[iii] != undefined)
+            {
+                var element = document.getElementById(popups[iii]);
+                element.style.right = right + "px";
+                right = right + 320;
+                element.style.display = "block";
+            }
+        }
+
+        for(var jjj = iii; jjj < popups.length; jjj++)
+        {
+            var element = document.getElementById(popups[jjj]);
+            element.style.display = "none";
+        }
+    }
+
+    //creates markup for a new popup. Adds the id to popups array.
+    function register_popup(id, name)
+    {
+
+        for(var iii = 0; iii < popups.length; iii++)
+        {
+            //already registered. Bring it to front.
+            if(id == popups[iii])
+            {
+                Array.remove(popups, iii);
+
+                popups.unshift(id);
+
+                calculate_popups();
+
+
+                return;
+            }
+        }
+
+        var element = '<div class="popup-box chat-popup" id="'+ id +'">';
+        element = element + '<div class="popup-head">';
+        element = element + '<div class="popup-head-left">'+ name +'</div>';
+        element = element + '<div class="popup-head-right"><a href="javascript:close_popup(\''+ id +'\');">&#10005;</a></div>';
+        element = element + '<div style="clear: both"></div></div><div class="popup-messages"></div></div>';
+
+        document.getElementsByTagName("body")[0].innerHTML = document.getElementsByTagName("body")[0].innerHTML + element;
+
+        popups.unshift(id);
+
+        calculate_popups();
+
+    }
+
+    //calculate the total number of popups suitable and then populate the toatal_popups variable.
+    function calculate_popups()
+    {
+        var width = window.innerWidth;
+        if(width < 540)
+        {
+            total_popups = 0;
+        }
+        else
+        {
+            width = width - 200;
+            //320 is width of a single popup box
+            total_popups = parseInt(width/320);
+        }
+
+        display_popups();
+
+    }
+
+    //recalculate when window is loaded and also when window is resized.
+    window.addEventListener("resize", calculate_popups);
+    window.addEventListener("load", calculate_popups);
+
+</script>
+<div class="row" >
   <h1>Home</h1>
 </div>
 
-{{users}}
+{{users}}<br/>
+{{total_popups}}
 <div class="row">
   <div class="chat-sidebar">
     <br/>
     <br/>
       <div class="sidebar-name" ng-repeat="user in users">
-          <a href="javascript:void(0)" ng-click="register_popup(user.username,user.username);">
+          <a href="javascript:void(0);" data-name="{{user.username}}" onclick="cc();" class="chat">
               <img width="30" height="30" ng-src="" />
               <span>{{user.username}}</span>
           </a>
       </div>
   </div>
 </div>
+
+<script>
+if(window.onload) {
+  alert(1);
+}
+(function(){
+    "use strict";
+    var cc = function(){
+      alert(1);
+    };
+    document.onload = function(){
+        var x = document.getElementsByClassName("chat");
+        console.log(x);
+    }
+
+
+
+
+
+})();
+</script>
